// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchContact should not render if not open 1`] = `<DocumentFragment />`;

exports[`SearchContact should render a modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw bHERBC absolute top-0 left-0 right-0 z-50 flex flex-col p-10 mx-auto mt-24 mb-24 overflow-hidden rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm goVygI w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Search Contact
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-neutral-dark"
          >
            Find the contact you need quickly and conveniently
          </div>
          <div
            class="-mx-10"
          >
            <div
              class="bg-theme-neutral-contrast px-10 pt-8 pb-8 mt-8"
              data-testid="SearchBar"
            >
              <div
                class="flex items-center px-10 py-6 bg-white rounded shadow-xl"
              >
                <div
                  class="sc-AxirZ iQaTP w-4 mr-8 text-theme-neutral-300"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    search.svg
                  </svg>
                </div>
                <div
                  class="flex-1 pl-4 mr-4 border-l border-theme-neutral-200"
                >
                  <input
                    class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 border-none shadow-none"
                    data-testid="Input"
                    placeholder="Search..."
                  />
                </div>
                <button
                  class="sc-AxjAm kbZyZT my-1"
                  color="primary"
                  data-testid="SearchBar__button"
                  type="button"
                >
                  <span
                    class="px-2 text-md"
                  >
                    Find it
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          >
            <div
              class="sc-fzpans eycyru"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    role="row"
                  >
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top pl-14"
                      >
                        <div>
                          Name
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxirZ jMwzyA"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-center"
                      >
                        <div>
                          Network
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top pl-14"
                      >
                        <div>
                          Address
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="group transition-colors duration-100 border-b border-dashed border-theme-neutral-200
						"
                  >
                    <td>
                      <div
                        class="sc-fzplWN dwQQsB"
                      >
                        <div
                          class="flex items-center space-x-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="ContactListItem__user--avatar"
                          >
                            <img
                              alt="Brian"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                              title="Brian"
                            />
                            <span
                              class="absolute text-sm font-semibold text-theme-background"
                            >
                              BR
                            </span>
                          </div>
                          <span
                            class="font-semibold"
                            data-testid="ContactListItem__name"
                          >
                            Brian
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN fGtuTb justify-center"
                      >
                        <div
                          aria-label="Ark Devnet"
                          class="sc-fznKkj hOKGXF border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-devnet"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="sc-fzplWN fGtuTb"
                      >
                        <div
                          class="flex items-center space-x-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              />
                            </div>
                          </div>
                          <div
                            class="inline-block truncate align-middle"
                          >
                            <span
                              class="sc-fznyAO hdDwJr text-theme-text font-semibold text-base"
                              data-testid="address__wallet-address"
                            >
                              D61mfSggzb…oHaqJ3Dyib
                            </span>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN huDFiZ justify-end "
                      >
                        <div
                          class="relative"
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="float-right"
                          >
                            <button
                              class="sc-AxjAm gBWztV"
                              color="primary"
                              type="button"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchContact should render a modal with custom title and description 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw bHERBC absolute top-0 left-0 right-0 z-50 flex flex-col p-10 mx-auto mt-24 mb-24 overflow-hidden rounded-xl bg-theme-background"
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm goVygI w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Modal title
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-neutral-dark"
          >
            Modal description
          </div>
          <div
            class="-mx-10"
          >
            <div
              class="bg-theme-neutral-contrast px-10 pt-8 pb-8 mt-8"
              data-testid="SearchBar"
            >
              <div
                class="flex items-center px-10 py-6 bg-white rounded shadow-xl"
              >
                <div
                  class="sc-AxirZ iQaTP w-4 mr-8 text-theme-neutral-300"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    search.svg
                  </svg>
                </div>
                <div
                  class="flex-1 pl-4 mr-4 border-l border-theme-neutral-200"
                >
                  <input
                    class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 border-none shadow-none"
                    data-testid="Input"
                    placeholder="Search..."
                  />
                </div>
                <button
                  class="sc-AxjAm kbZyZT my-1"
                  color="primary"
                  data-testid="SearchBar__button"
                  type="button"
                >
                  <span
                    class="px-2 text-md"
                  >
                    Find it
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          >
            <div
              class="sc-fzpans eycyru"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    role="row"
                  >
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top pl-14"
                      >
                        <div>
                          Name
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxirZ jMwzyA"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-center"
                      >
                        <div>
                          Network
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top pl-14"
                      >
                        <div>
                          Address
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="group transition-colors duration-100 border-b border-dashed border-theme-neutral-200
						"
                  >
                    <td>
                      <div
                        class="sc-fzplWN dwQQsB"
                      >
                        <div
                          class="flex items-center space-x-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="ContactListItem__user--avatar"
                          >
                            <img
                              alt="Brian"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                              title="Brian"
                            />
                            <span
                              class="absolute text-sm font-semibold text-theme-background"
                            >
                              BR
                            </span>
                          </div>
                          <span
                            class="font-semibold"
                            data-testid="ContactListItem__name"
                          >
                            Brian
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN fGtuTb justify-center"
                      >
                        <div
                          aria-label="Ark Devnet"
                          class="sc-fznKkj hOKGXF border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-devnet"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class=""
                    >
                      <div
                        class="sc-fzplWN fGtuTb"
                      >
                        <div
                          class="flex items-center space-x-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              />
                            </div>
                          </div>
                          <div
                            class="inline-block truncate align-middle"
                          >
                            <span
                              class="sc-fznyAO hdDwJr text-theme-text font-semibold text-base"
                              data-testid="address__wallet-address"
                            >
                              D61mfSggzb…oHaqJ3Dyib
                            </span>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="sc-fzplWN huDFiZ justify-end "
                      >
                        <div
                          class="relative"
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="float-right"
                          >
                            <button
                              class="sc-AxjAm gBWztV"
                              color="primary"
                              type="button"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
